manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-string
spec:
  replicas: 1
  selector:
    matchLabels:
      app: random-string
  template:
    metadata:
      labels:
        app: random-string
    spec:
      containers:
        - name: hashgenerator
          image: atteh0gm4n/random-string
